Add Firebase configuration files and set up GitHub Actions for deployment. Update hosting settings in firebase.json and add initial HTML template for Firebase Hosting. Enhance login page with a link component.

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "out",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -11,17 +11,6 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ],
-    "headers": [
-      {
-        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "max-age=31536000"
-          }
-        ]
-      }
     ]
   },
   "firestore": {
@@ -29,4 +18,3 @@
     "indexes": "firestore.indexes.json"
   }
 }
-
