--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^12.6.0",
     "lucide-react": "^0.555.0",
     "next": "^16.0.7",
+    "next-intl": "^4.6.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-firebase-hooks": "^5.1.1",
